# Test

./: .info  CLAUDE.md  Cargo.toml  DOCS.md  build.sh  env.sh  migrate_package.sh  合并.md
.github/workflows/: fdroid.yml  flutter-build.yml  playground.yml
docs/: ANDROID_KEEPALIVE_LOG_ANALYSIS.md  ANDROID_STATE_MACHINE.md  CHANGELOG.md  KNOWN_BUGS.md  PROJECT_INDEX.md  PROJECT_MEMORY.md
fastlane/metadata/android/en-US/: full_description.txt
flutter/: pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner/: Info.plist
flutter/lib/: common.dart  consts.dart  generated_bridge.dart
flutter/lib/common/widgets/: dialog.dart  login.dart  overlay.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_setting_page.dart  remote_page.dart  terminal_connection_manager.dart  terminal_page.dart
flutter/lib/models/: input_model.dart  model.dart  native_model.dart  peer_tab_model.dart  server_model.dart  terminal_model.dart  user_model.dart
flutter/lib/utils/: platform_channel.dart
flutter/macos/Runner/: Info.plist
flutter/windows/runner/: Runner.rc
libs/hbb_common/src/: config.rs  lib.rs
libs/portable/: Cargo.toml
libs/portable/src/: main.rs
src/: auth_2fa.rs  bridge_generated.io.rs  bridge_generated.rs  clipboard.rs  common.rs  core_main.rs  lang.rs  rendezvous_mediator.rs  ui.rs  ui_session_interface.rs  updater.rs  virtual_display_manager.rs
src/hbbs_http/: sync.rs
src/lang/: cn.rs  en.rs  tw.rs
src/platform/: windows.rs
src/plugin/: callback_msg.rs  manager.rs  mod.rs
src/server/: connection.rs
src/ui/: index.tis
(+28 files in other folders)
